# llmtransform

./: .gitignore  CHANGELOG.md  LICENSE.md  MANUAL.md  README.md
llm-transform/: Cargo.toml
llm-transform/src/: edit.rs  file.rs  json.rs  language.rs  lib.rs  main.rs  position.rs
llm-transform/tests/: cli_test.rs
llm-transform/tests/fixtures/: edits.json  edits_multiple.json  edits_wrong_checksum.json
