[package]
name = "llm-transform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "llm-transform"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
uuid = { version = "1.10", features = ["v4"] }
